# stacco

./: .gitignore  LICENSE  README.md
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  engine.rs  error.rs  hotkey.rs  lib.rs  main.rs  persistence.rs  state.rs  tray.rs
src-tauri/src/input/: mod.rs  windows.rs
