[package]
name = "stacco"
version = "0.2.0"
description = "A clean, native Windows autoclicker built with Tauri and Rust."
authors = ["ferou <misharobloxdiscord@gmail.com>"]
license = "MIT"
edition = "2024"
# Minimum supported Rust version. 1.88 is the floor for `let` chains (used in
# config.rs / engine.rs); edition 2024 itself only needs 1.85. The toolchain on
# this machine is current (1.96+) again now that the old rustup block is gone.
rust-version = "1.88"

# The Tauri command core lives in a library crate so it can be shared between
# the desktop binary (`main.rs`) and, potentially, integration tests.
[lib]
name = "stacco_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

# Win32 input synthesis (SendInput) and cursor queries.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# Smaller, faster release binaries. These settings are recommended by the
# Tauri project for distribution builds.
[profile.release]
opt-level = "s"   # optimize for size; the click loop is not compute-bound
lto = true        # link-time optimization across crates
codegen-units = 1 # better optimization at the cost of compile time
panic = "abort"   # no unwinding machinery in the shipped binary
strip = true      # drop debug symbols from the final artifact

# Edition 2024 already implies resolver v3; this explicit workspace root keeps
# it pinned and lets the MSRV-aware resolver honor `rust-version` above.
[workspace]
resolver = "3"
